--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <canvas id="canv"></canvas>
     <script type="module">
         import "/engine/engine.js"
-        import "/mygame/mygame.js"
+        import "/MyGame/mygame.js"
         SceneManager.startScenes(allScenes, "MyGame")
     </script>
 </body>
