--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <canvas id="canv"></canvas>
     <script type="module">
         import "/engine/engine.js"
-        import "/MyGame/mygame.js"
-        SceneManager.startScenes(allScenes, "MyGame")
+        import "/MyGame/cubecombat.js"
+        SceneManager.startScenes(allScenes, "Cube Combat")
     </script>
 </body>
 
